--- a/test_stylesheet/ss.qss
+++ b/test_stylesheet/ss.qss
@@ -1,4 +1,43 @@
-QMenuBar:item:selected {  
+
+QToolButton { /* all types of tool button */
+
+    border-radius: 0px;
+    padding-left:0px;
+    padding-right:0px;
+    padding-top:0px;
+    padding-bottom:0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: 35px;
+    width: 35px;
+    /*background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #f6f7fa, stop: 1 #dadbde);*/
+}
+
+QToolButton[popupMode="1"] { /* only for MenuButtonPopup */
+    padding-right: 20px; /* make way for the popup button */
+}
+
+QToolButton:pressed {
+    background-color: rgba(70, 70, 70, 255);
+}
+
+QToolButton:hover {
+    background-color: rgba(175, 175, 175, 255);
+    }
+
+/* the subcontrols below are used only in the MenuButtonPopup mode */
+QToolButton::menu-button {
+    border: 2px solid gray;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    /* 16px width + 4px for border = 20px allocated above */
+    width: 16px;
+}
+
+/*
+QMenuBar:item:selected {
     background: rgba(70, 70, 70, 255); color:white;
     }
 
@@ -7,8 +46,13 @@ QMenu:item:selected  {
     color: white;
     }
 
+/*
+QPushButton {
+    background-color: rgba(25, 235, 235, 255);
+    }
+*/
 QToolButton:hover {
-    background-color: rgba(150, 150, 150, 0);
+    background-color: rgba(150, 150, 150, 255);
     }
 
 QToolBar {
@@ -21,3 +65,5 @@ QToolBar {
     margin-left: 0px;
     margin-right: 0px;
     }
+
+*/
