--- a/test_ixiaLayput/mainwindow.ui
+++ b/test_ixiaLayput/mainwindow.ui
@@ -473,7 +473,7 @@
              <property name="maximumSize">
               <size>
                <width>150</width>
-               <height>16777215</height>
+               <height>24</height>
               </size>
              </property>
             </widget>
@@ -616,7 +616,7 @@
              <property name="maximumSize">
               <size>
                <width>150</width>
-               <height>16777215</height>
+               <height>24</height>
               </size>
              </property>
             </widget>
